# flifile

./: README.md  pyproject.toml
.github/workflows/: black.yml  mypy.yml  publish.yml  pytest.yml  ruff.yml  wheels.yml
flifile/: __init__.py  datatypes.py  flifile.py  readheader.py
tests/: test1.py  test_readfile.py  test_readheader.py
tests/testdata/: FliFile1.0(1)_DEV_1AB22C01C4FA_DS_0x0_02HH6.fli  FliFile1.0_DEV_1AB22C01C4FA_DS_0x0_02HH6.fli  FliFile2.0(1)_DEV_1AB22C01C4FA_DS_0x0_02HH6.fli  FliFile2.0_DEV_1AB22C01C4FA_DS_0x0_02HH6.fli  header.txt  header1.py  header1.txt  headers.py
